feat(cb2-10900): table formatting and test data

--- a/src/main/resources/views/CommercialVehicles/IVA30.hbs
+++ b/src/main/resources/views/CommercialVehicles/IVA30.hbs
@@ -27,7 +27,7 @@
         <div class="header-left">
             <div class="header-serial-no">
                 <div class="header-serial-no-title">
-                    <span> <b>Serial Number: </b> <!-- Put Serial Number data here --> </span>
+                    <span> <b>Serial Number: </b>  1234567Z <!-- Put Serial Number data here --> </span>
                 </div>
             </div>
             <div class="header-pagination"> Page 1 of 2</div>
@@ -45,7 +45,6 @@
     <p id = "appointment-text"> AN APPOINTMENT FOR RE-EXAMINATION <b>CANNOT</b> BE MADE ON THE DAY ON WHICH THIS EXAMINATION WAS CARRIED OUT
         PLEASE CONTACT <b> (0300) 200 1188 </b> TO MAKE AN APPOINTMENT QUOTING YOUR TAS REFERENCE NUMBER </p>
 
-    <!-- put details table here -->
     <table class="table">
         <thead>
         <th scope="row" colspan="2" class="section-title-border">
@@ -53,15 +52,15 @@
         </th>
         </thead>
         <tr class="table-row-cell">
-            <td class="table-row-cell"><b>Vehicle/Trailer NR No: </b> <!--Put data here --> </td>
-            <td class="table-row-cell"><b>Test Category: </b> <!--Put data here --> </td>
+            <td class="table-row-cell"><b>Vehicle/Trailer NR No: </b> 1234567Z <!--Put data here --> </td>
+            <td class="table-row-cell"><b>Test Category: </b> M1 (Basic) / L0K <!--Put data here --> </td>
         </tr>
         <tr class="table-row-cell">
-            <td class="table-row-cell"><b>Make/Model: </b> <!--Put data here --> </td>
-            <td class="table-row-cell"><b>VIN/Chassis No: </b> <!--Put data here --> </td>
+            <td class="table-row-cell"><b>Make/Model: TEST </b> <!--Put data here --> </td>
+            <td class="table-row-cell"><b>VIN/Chassis No: 123456789455644654 </b> <!--Put data here --> </td>
         </tr>
         <tr class="table-row-cell">
-            <td class="table-row-cell"> <b>Body Type: </b> <!--Put data here --> </td>
+            <td class="table-row-cell"> <b>Body Type: Hatchback </b> <!--Put data here --> </td>
             <td class = "no-border-cell"></td>
         </tr>
     </table>
@@ -75,6 +74,16 @@
             <h1> Required Standard(s) Not Met: </h1>
         </div>
         <div class="section-text-wrapper">
+            <p> 04 - REAR REGISTRATION PLATE SPACE
+                RS1: All vehicles must comply with one of the registration plate spaces shown in the table in Section 04 of the IVA M1 Manual
+                16 - EXTERIOR PROJECTIONS
+                RS2: All ‘hard’ parts contactable with a 100mm sphere, which form an external surface or protrude 5mm or more from the external
+                surface must have a radius of curvature of at least 2.5mm (see Notes 2, 3, 4 & 6).
+                Additional Information: OSF Corner of Wing
+                17 - SPEEDOMETER AND REVERSE GEAR
+                RS4: The speedometer must not indicate a speed less than the true speed.
+                FURTHER COMMENTS:
+                N/A</p>
             <!-- List incoming defects here -->
         </div>
     </div>
@@ -87,19 +96,20 @@
     <table class="table">
         <tr>
             <td></td>
-            <td class="table-row-cell"> <b>Reapplication required by: </b> <!--Put data here --> </td>
+            <td class="table-row-cell"> <b>Reapplication required by: 06/08/2024 </b> <!--Put data here --> </td>
         </tr>
         <tr>
             <td class="table-row-cell"> <b>Signed: </b> <!--Put data here --> </td>
-            <td class="table-row-cell"> <b>Date: </b> <!--Put data here --> </td>
+            <td class="table-row-cell"> <b>Date: </b> 06/08/2024 <!--Put data here --> </td>
         </tr>
         <tr>
-            <td class="table-row-cell"> <b>Name: </b> <!--Put data here --> </td>
-            <td class="table-row-cell"> <b>Station: </b> <!--Put data here --> </td>
+            <td class="table-row-cell"> <b>Name: </b> karl Favill <!--Put data here --> </td>
+            <td class="table-row-cell"> <b>Station: </b> Chatterton <!--Put data here --> </td>
         </tr>
         <tr>
             <td class="table-row-cell" colspan="2"> <p><b>The following additional defects may result in the vehicle not complying with the requirements
                 of The Road Vehicles (Construction and Use) Regulations 1986. (See notes overleaf) </b></p>
+                <p> N/A </p>
                 <!-- Put AdditionalDefects here -->
             </td>
         </tr>
