feat(cb2-10900): table formatting and test data

--- a/src/main/resources/views/CommercialVehicles/IVA30.hbs
+++ b/src/main/resources/views/CommercialVehicles/IVA30.hbs
@@ -56,11 +56,11 @@
             <td class="table-row-cell"><b>Test Category: </b> M1 (Basic) / L0K <!--Put data here --> </td>
         </tr>
         <tr class="table-row-cell">
-            <td class="table-row-cell"><b>Make/Model: TEST </b> <!--Put data here --> </td>
-            <td class="table-row-cell"><b>VIN/Chassis No: 123456789455644654 </b> <!--Put data here --> </td>
+            <td class="table-row-cell"><b>Make/Model: </b> TEST <!--Put data here --> </td>
+            <td class="table-row-cell"><b>VIN/Chassis No: </b>  123456789455644654 <!--Put data here --> </td>
         </tr>
         <tr class="table-row-cell">
-            <td class="table-row-cell"> <b>Body Type: Hatchback </b> <!--Put data here --> </td>
+            <td class="table-row-cell"> <b>Body Type: </b> Hatchback <!--Put data here --> </td>
             <td class = "no-border-cell"></td>
         </tr>
     </table>
@@ -78,7 +78,7 @@
                 RS1: All vehicles must comply with one of the registration plate spaces shown in the table in Section 04 of the IVA M1 Manual
                 16 - EXTERIOR PROJECTIONS
                 RS2: All ‘hard’ parts contactable with a 100mm sphere, which form an external surface or protrude 5mm or more from the external
-                surface must have a radius of curvature of at least 2.5mm (see Notes 2, 3, 4 & 6).
+                surface must have a radius of curvature of at least 2.5mm (see Notes 2, 3, 4 &amp; 6).
                 Additional Information: OSF Corner of Wing
                 17 - SPEEDOMETER AND REVERSE GEAR
                 RS4: The speedometer must not indicate a speed less than the true speed.
