feat(cb2-10900): test data

--- a/src/main/resources/views/CommercialVehicles/IVA30.hbs
+++ b/src/main/resources/views/CommercialVehicles/IVA30.hbs
@@ -75,12 +75,12 @@
         </div>
         <div class="section-text-wrapper">
             <p> 04 - REAR REGISTRATION PLATE SPACE
-                RS1: All vehicles must comply with one of the registration plate spaces shown in the table in Section 04 of the IVA M1 Manual
-                16 - EXTERIOR PROJECTIONS
+                RS1: All vehicles must comply with one of the registration plate spaces shown in the table in Section 04 of the IVA M1 Manual </p>
+            <p> 16 - EXTERIOR PROJECTIONS
                 RS2: All ‘hard’ parts contactable with a 100mm sphere, which form an external surface or protrude 5mm or more from the external
                 surface must have a radius of curvature of at least 2.5mm (see Notes 2, 3, 4 &amp; 6).
-                Additional Information: OSF Corner of Wing
-                17 - SPEEDOMETER AND REVERSE GEAR
+                Additional Information: OSF Corner of Wing </p>
+            <p> 17 - SPEEDOMETER AND REVERSE GEAR
                 RS4: The speedometer must not indicate a speed less than the true speed.
                 FURTHER COMMENTS:
                 N/A</p>
@@ -96,7 +96,7 @@
     <table class="table">
         <tr>
             <td></td>
-            <td class="table-row-cell"> <b>Reapplication required by: 06/08/2024 </b> <!--Put data here --> </td>
+            <td class="table-row-cell"> <b>Reapplication required by: </b> 06/08/2024<!--Put data here --> </td>
         </tr>
         <tr>
             <td class="table-row-cell"> <b>Signed: </b> <!--Put data here --> </td>
