--- a/src/main/resources/assets/stylesheets/iva-30.hbs
+++ b/src/main/resources/assets/stylesheets/iva-30.hbs
@@ -202,6 +202,7 @@ table-layout: auto;
 .table-row-cell {
 border-style: solid;
 border-width: 1px;
+padding: 0.25em;
 width: 50%;
 vertical-align: middle;
 font-size: 85%;
