--- a/src/main/resources/views/CommercialVehicles/IVA30.hbs
+++ b/src/main/resources/views/CommercialVehicles/IVA30.hbs
@@ -27,7 +27,7 @@
         <div class="header-left">
             <div class="header-serial-no">
                 <div class="header-serial-no-title">
-                    <span> <b>Serial Number: </b>  1234567Z <!-- Put Serial Number data here --> </span>
+                    <span> <b>Serial Number: </b> <!-- Put Serial Number data here --> </span>
                 </div>
             </div>
             <div class="header-pagination"> Page 1 of 2</div>
@@ -52,15 +52,15 @@
         </th>
         </thead>
         <tr class="table-row-cell">
-            <td class="table-row-cell"><b>Vehicle/Trailer NR No: </b> 1234567Z <!--Put data here --> </td>
-            <td class="table-row-cell"><b>Test Category: </b> M1 (Basic) / L0K <!--Put data here --> </td>
+            <td class="table-row-cell"><b>Vehicle/Trailer NR No: </b> <!--Put data here --> </td>
+            <td class="table-row-cell"><b>Test Category: </b> <!--Put data here --> </td>
         </tr>
         <tr class="table-row-cell">
-            <td class="table-row-cell"><b>Make/Model: </b> TEST <!--Put data here --> </td>
-            <td class="table-row-cell"><b>VIN/Chassis No: </b>  123456789455644654 <!--Put data here --> </td>
+            <td class="table-row-cell"><b>Make/Model: </b> <!--Put data here --> </td>
+            <td class="table-row-cell"><b>VIN/Chassis No: </b> <!--Put data here --> </td>
         </tr>
         <tr class="table-row-cell">
-            <td class="table-row-cell"> <b>Body Type: </b> Hatchback <!--Put data here --> </td>
+            <td class="table-row-cell"> <b>Body Type: </b> <!--Put data here --> </td>
             <td class = "no-border-cell"></td>
         </tr>
     </table>
@@ -74,16 +74,6 @@
             <h1> Required Standard(s) Not Met: </h1>
         </div>
         <div class="section-text-wrapper">
-            <p> 04 - REAR REGISTRATION PLATE SPACE
-                RS1: All vehicles must comply with one of the registration plate spaces shown in the table in Section 04 of the IVA M1 Manual </p>
-            <p> 16 - EXTERIOR PROJECTIONS
-                RS2: All ‘hard’ parts contactable with a 100mm sphere, which form an external surface or protrude 5mm or more from the external
-                surface must have a radius of curvature of at least 2.5mm (see Notes 2, 3, 4 &amp; 6).
-                Additional Information: OSF Corner of Wing </p>
-            <p> 17 - SPEEDOMETER AND REVERSE GEAR
-                RS4: The speedometer must not indicate a speed less than the true speed.
-                FURTHER COMMENTS:
-                N/A</p>
             <!-- List incoming defects here -->
         </div>
     </div>
@@ -92,19 +82,18 @@
         grounds that the vehicle fails to comply with the relevant requirements prescribed under The Road Vehicles
         (Approval) Regulations 2020 </p>
 
-    <!-- Date/name table here -->
     <table class="table">
         <tr>
             <td></td>
-            <td class="table-row-cell"> <b>Reapplication required by: </b> 06/08/2024<!--Put data here --> </td>
+            <td class="table-row-cell"> <b>Reapplication required by: </b> <!--Put data here --> </td>
         </tr>
         <tr>
             <td class="table-row-cell"> <b>Signed: </b> <!--Put data here --> </td>
-            <td class="table-row-cell"> <b>Date: </b> 06/08/2024 <!--Put data here --> </td>
+            <td class="table-row-cell"> <b>Date: </b>  <!--Put data here --> </td>
         </tr>
         <tr>
-            <td class="table-row-cell"> <b>Name: </b> karl Favill <!--Put data here --> </td>
-            <td class="table-row-cell"> <b>Station: </b> Chatterton <!--Put data here --> </td>
+            <td class="table-row-cell"> <b>Name: </b> <!--Put data here --> </td>
+            <td class="table-row-cell"> <b>Station: </b> <!--Put data here --> </td>
         </tr>
         <tr>
             <td class="table-row-cell" colspan="2"> <p><b>The following additional defects may result in the vehicle not complying with the requirements
