--- a/src/main/resources/views/CommercialVehicles/IVA30.hbs
+++ b/src/main/resources/views/CommercialVehicles/IVA30.hbs
@@ -8,7 +8,12 @@
 </head>
 
 <body>
+<div class="first-page-header-left">
 
+</div>
+<div class="first-page-header-right">
+
+</div>
 <div class="footer-left">
     <p> <b class="bold-title">IVA30VTA (DVSA0842) </b> </p>
 </div>
