feat(cb2-10900): dynamic header pagination

--- a/src/main/resources/assets/stylesheets/iva-30.hbs
+++ b/src/main/resources/assets/stylesheets/iva-30.hbs
@@ -106,7 +106,7 @@ width: 50%;
 
 
 .footer-left {
-position: running(footer-left)
+position: running(footer-left);
 }
 
 .footer-mid {
@@ -168,7 +168,7 @@ margin-top: 2px;
 .first-page-header-left {
 position: running(first-page-header-left);
 }
-.header-right {
+.first-page-header-right {
 position: running(first-page-header-right);
 padding-bottom: 0px;
 margin-bottom: 0px;
