feat(cb2-10900): dynamic header pagination

--- a/src/main/resources/assets/stylesheets/iva-30.hbs
+++ b/src/main/resources/assets/stylesheets/iva-30.hbs
@@ -14,6 +14,7 @@ content: element(footer-right);
 }
 
 @page :first{
+margin-top: 2cm;
 @top-left{
 content: element(first-page-header-left);
 }
@@ -160,15 +161,12 @@ margin: 0px;
 clear: both;
 }
 
-.page-header {
-width: 100%;
-margin-top: 2px;
-}
-
 .first-page-header-left {
+margin-top: 2px;
 position: running(first-page-header-left);
 }
 .first-page-header-right {
+margin-top: 2px;
 position: running(first-page-header-right);
 padding-bottom: 0px;
 margin-bottom: 0px;
