--- a/src/main/resources/views/CommercialVehicles/IVA30.hbs
+++ b/src/main/resources/views/CommercialVehicles/IVA30.hbs
@@ -14,7 +14,10 @@
             <span> <b>Serial Number: </b> <!-- Put Serial Number data here --> </span>
         </div>
     </div>
-    <div class="header-pagination"> Page 1 of 2</div>
+    <div class="header-pagination">
+        <span> Page 1 of </span>
+        <span> </span>
+    </div>
 </div>
 <div class="first-page-header-right">
     <img src="{{root}}/assets/images/dvsa_crest.png" alt="logo" width="110"/>
