feat(cb2-10900): dynamic header pagination

--- a/src/main/resources/assets/stylesheets/iva-30.hbs
+++ b/src/main/resources/assets/stylesheets/iva-30.hbs
@@ -14,7 +14,7 @@ content: element(footer-right);
 }
 
 @page :first{
-margin-top: 2cm;
+margin-top: 21mm;
 @top-left{
 content: element(first-page-header-left);
 }
@@ -196,6 +196,10 @@ padding-right: 1em;
 padding-top: 2em;
 padding-bottom: 2em;
 margin-top: -1px;
+}
+
+#header-pagination-num{
+content: counter(pages);
 }
 
 .table {
