--- a/src/main/resources/views/CommercialVehicles/IVA30.hbs
+++ b/src/main/resources/views/CommercialVehicles/IVA30.hbs
@@ -16,7 +16,7 @@
     </div>
     <div class="header-pagination">
         <span> Page 1 of </span>
-        <span> </span>
+        <span id ="header-pagination-num"> </span>
     </div>
 </div>
 <div class="first-page-header-right">
