--- a/src/main/resources/assets/stylesheets/iva-30.hbs
+++ b/src/main/resources/assets/stylesheets/iva-30.hbs
@@ -162,12 +162,13 @@ clear: both;
 }
 
 .first-page-header-left {
-margin-top: 96px;
+margin-top: 48px;
 position: running(first-page-header-left);
 }
 .first-page-header-right {
-margin-top: 96px;
+margin-top: 48px;
 position: running(first-page-header-right);
+float: right;
 padding-bottom: 0px;
 margin-bottom: 0px;
 }
