feat(cb2-10900): dynamic header formatting image

--- a/src/main/resources/assets/stylesheets/iva-30.hbs
+++ b/src/main/resources/assets/stylesheets/iva-30.hbs
@@ -165,9 +165,10 @@ clear: both;
 margin-top: 47px;
 position: running(first-page-header-left);
 }
-.first-page-header-right {
+.first-page-header-right{
 margin-top: 47px;
 position: running(first-page-header-right);
+padding-left: 10px;
 padding-bottom: 0px;
 margin-bottom: 0px;
 }
@@ -198,7 +199,7 @@ padding-bottom: 2em;
 margin-top: -1px;
 }
 
-#header-pagination-num{
+#header-pagination-num: before{
 content: counter(pages);
 }
 
