--- a/src/main/resources/assets/stylesheets/iva-30.hbs
+++ b/src/main/resources/assets/stylesheets/iva-30.hbs
@@ -18,8 +18,8 @@ margin-top: 31mm;
 @top-left{
 content: element(first-page-header-left);
 }
-@top-right{
-content:element(first-page-header-right);
+@top-right-corner{
+content: element(first-page-header-right);
 }
 }
 
@@ -77,7 +77,6 @@ border-color: black;
 background-color: #d0d0d0;
 font-weight:bold;
 text-align: center;
-margin-top: -2px;
 margin-left: -1px;
 width: 100.4%;
 }
