--- a/src/main/resources/views/CommercialVehicles/IVA30.hbs
+++ b/src/main/resources/views/CommercialVehicles/IVA30.hbs
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+<!-- FIRST PAGE HEADER -->
 <div class="first-page-header-left">
     <div class="header-serial-no">
         <div class="header-serial-no-title">
@@ -23,6 +24,7 @@
     <img src="{{root}}/assets/images/dvsa_crest.png" alt="logo" width="110"/>
 </div>
 
+<!-- footer for all pages -->
 <div class="footer-left">
     <p> <b class="bold-title">IVA30VTA (DVSA0842) </b> </p>
 </div>
@@ -35,8 +37,9 @@
     <p><b>Version 1.0 Apr 2024</b></p>
 </div>
 
+<!-- first page -->
 <div class="separate-page">
-    <div class="section-title-border">
+    <div class="section-title-border" id ='cert-title-border'>
         <h1> INDIVIDUAL VEHICLE APPROVAL (IVA)</h1>
         <h1> NOTIFICATION OF REFUSAL TO ISSUE AN INDIVIDUAL APPROVAL CERTIFICATE </h1>
         <p id="cert-subtitle"><b>The Road Vehicles (Approval) Regulations 2020</b></p>
@@ -45,6 +48,7 @@
     <p id = "appointment-text"> AN APPOINTMENT FOR RE-EXAMINATION <b>CANNOT</b> BE MADE ON THE DAY ON WHICH THIS EXAMINATION WAS CARRIED OUT
         PLEASE CONTACT <b> (0300) 200 1188 </b> TO MAKE AN APPOINTMENT QUOTING YOUR TAS REFERENCE NUMBER </p>
 
+    <!--- Vehicle details section -->
     <table class="table">
         <thead>
         <th scope="row" colspan="2" class="section-title-border">
@@ -82,6 +86,7 @@
         grounds that the vehicle fails to comply with the relevant requirements prescribed under The Road Vehicles
         (Approval) Regulations 2020 </p>
 
+    <!--- Signature Section --->
     <table class="table">
         <tr>
             <td></td>
@@ -119,7 +124,7 @@
     </div>
 </div>
 
-
+<!-- back-page -->
 <div class="separate-page" id="back-page">
     <!-- first box -->
     <div class="section-border">
