--- a/src/main/resources/views/CommercialVehicles/MSVA30.hbs
+++ b/src/main/resources/views/CommercialVehicles/MSVA30.hbs
@@ -3,7 +3,7 @@
 <head>
     <title>IVA30</title>
     <style type="text/css" media="print, screen">
-        {{~> assets/stylesheets/iva-30 this}}
+        {{~> assets/stylesheets/iva-msva-30 this}}
     </style>
 </head>
 
@@ -26,7 +26,7 @@
 
 
 <div class="footer-left">
-    <p> <b class="bold-title">MSVA30VTA (DVSA0848) </b> </p>
+    <p> <b>MSVA30VTA (DVSA0848) </b></p>
 </div>
 <div class = "footer-mid">
     <span class="footer-current-page-number"></span>
@@ -227,7 +227,7 @@
             <h1>USE OF THE VEHICLE</h1>
         </div>
         <div class="section-text-wrapper">
-            <p id="no-margin-p">It is an offence to use a vehicle that requires type approval without an Individual Approval
+            <p id="use-vehicle-p">It is an offence to use a vehicle that requires type approval without an Individual Approval
                 Certificate confirming compliance with the type approval requirements, except for the purposes of:</p>
             <ul class="vehicle-section-list">
                 <li> - submitting it, by previous arrangement, for an approval examination;</li>
