feat(cb2-11137): MSVA30 remove testing image path

--- a/src/main/resources/views/CommercialVehicles/MSVA30.hbs
+++ b/src/main/resources/views/CommercialVehicles/MSVA30.hbs
@@ -157,67 +157,43 @@
         </div>
         <div class="section-text-wrapper">
             <p> This notification indicates the items of non-compliance being the reason(s)
-                why an Individual Approval Certificate (IAC) has not been issued. An application
+                why a Minister's Approval Certificate (MAC) has not been issued. An application
                 for re-examination can be made up to 6 calendar months following the issue date
                 of the first "Notification of Refusal" in respect of the original application.
                 In any other case, a new application and a full fee must be submitted.</p>
-            <p> When modification/rectification has been completed, or additional evidence of
-                compliance obtained, an application for a re-examination (verbally or in writing)
-                should be made, in the case of an M1 or N1 vehicle class listed below, to attend at the test
-                station that issued this notification and in respect of any other class or category, to
-                the test station of your choice. To obtain a re-examination appointment please contact <strong>(0300) 200 1188</strong> </p>
-
-            <div class="exam-list">
-                <ul id="left-exam-list">
-                    <li>Amateur Built Vehicle</li>
-                    <li>Rebuilt Vehicle</li>
-                    <li>Motor Ambulance</li>
-                    <li>Motor Caravan</li>
-                    <li>Vehicle manufactured using parts of a registered vehicle</li>
-                </ul>
-
-                <ul id="right-exam-list">
-                    <li>Disabled Person's Vehicle</li>
-                    <li>Hearse</li>
-                    <li>Armoured Vehicle</li>
-                    <li>Vehicle manufactured in very low volume</li>
-                </ul>
-            </div>
-
-            <div class="refusal-list">
-                <p> Where a "Notification of Refusal" is issued, a further examination (a retest) will be carried
-                    out without further payment if: </p>
-                <p> - the vehicle is submitted for the examination at the place where it was previously examined, and</p>
-                <p> - the vehicle is submitted for examination before the end of the fifth day on which DVSA is accepting
-                    vehicles for inspection following the day of the original examination, and</p>
-                <p> - in the case of any vehicle category, the application is due to a failure to provide sufficient
-                    documentary evidence before the examination to demonstrate compliance, or</p>
-                <p> - in the case of an M1 or N1 category vehicle only, failure is due to one or more of the following
-                    items (subject to a maximum of six items)</p>
-            </div>
+            <p> When modification/rectification, etc. has been completed an application for a re-examination (verbally or in writing)
+                should be made to the test station that issued this notification. </p>
+            <p> At the time of submitting the vehicle for re-examination a fee will be payable, unless failure is due
+            only to one or more of the following items and the vehicle is submitted for re-examination at the test
+            station that issued this notification before the end of the fifth day on which DVSA are accepting vehicles
+            for test following the date of issue. </p>
 
             <ul class="item-list">
-                <li>Item 3           Fuel tanks/rear protective devices - fuel filler arrangements only;</li>
-                <li>Item 4           Rear registration plate space - all requirements;</li>
-                <li>Item 7           Audible warning - operation of audible warning device only;</li>
-                <li>Item 8           Indirect vision - all except field of view;</li>
-                <li>Item 9           Braking - warning lamps only;</li>
-                <li>Item 10         EMC - markings only;</li>
-                <li>Item 12         Interior fittings - no more than 3 separate examples of failure to comply;</li>
-                <li>Item 13         Anti-theft &amp; immobiliser - all requirements;</li>
-                <li>Item 16         Exterior projections - no more than 3 separate examples of failure to comply;</li>
-                <li>Item 17         Speedometer - illumination only;</li>
-                <li>Item 18         Plates - all requirements;</li>
-                <li>Item 20-30    Lighting - all except angle of visibility and position;</li>
-                <li>Item 31         Seat belts - child restraint warning label only;</li>
-                <li>Item 33         Controls - no more than 3 separate examples of failure to comply;</li>
-                <li>Item 34         Defrost/demist - all requirements;</li>
-                <li>Item 35         Wash/wipe - all requirements;</li>
-                <li>Item 36         Heating - all requirements;</li>
-                <li>Item 37         Wheel guards - all requirements;</li>
-                <li>Item 45         Safety glass - approval marking only;</li>
-                <li>Item 46         Tyres - approval marking, one example only;</li>
-
+                <li>No more than three failure items in section 8 &amp; 9, external projections (unbodied and/or bodied),
+                and/or one or more failure items in the following sections:-</li>
+                <li>section 1, stands,</li>
+                <li>section 2 and/or 3, mirrors (unbodied/bodied),</li>
+                <li>section 4, speedometer,</li>
+                <li>section 5, audible warning,</li>
+                <li>section 6, lighting,</li>
+                <li>section 7, unauthorised use,</li>
+                <li>section 10, rear registration plate space,</li>
+                <li>section 11, handholds,</li>
+                <li>section 12, headlamp pattern (unbodied),</li>
+                <li>section 13, headlamp aim (bodied),</li>
+                <li>section 14, design and construction,</li>
+                <li>section 15, tyres,</li>
+                <li>section 17, radio suppression,</li>
+                <li>section 22, goods vehicle identification plate,</li>
+                <li>section 23, engine power restriction information plate,</li>
+                <li>section 24, defrost/demist,</li>
+                <li>section 26, glazing,</li>
+                <li>section 27, windscreen wipers and washers,</li>
+                <li>section 28, masses and dimensions,
+                and/or the following sections <b><u>except</u></b> for the specific sections noted:-</li>
+                <li>section 16, brakes, except any failure, the repair or adjustment of which may affect the system
+                performance, which must then be retested.</li>
+                <li>section 18, exhaust system, except for the noise limits/test.</li>
             </ul>
         </div>
     </div>
@@ -227,17 +203,17 @@
             <h1>USE OF THE VEHICLE</h1>
         </div>
         <div class="section-text-wrapper">
-            <p id="use-vehicle-p">It is an offence to use a vehicle that requires type approval without an Individual Approval
-                Certificate confirming compliance with the type approval requirements, except for the purposes of:</p>
+            <p id="use-vehicle-p">It is an offence to use a vehicle that requires type approval without a Minister's Approval
+                Certificate confirming compliance with the type approval requirements except for the purposes of:-</p>
             <ul class="vehicle-section-list">
-                <li> - submitting it, by previous arrangement, for an approval examination;</li>
+                <li> - submitting it, by previous arrangement, for an examination for Approval;</li>
                 <li> - bringing it away from such an examination;</li>
                 <li> - delivering it, by previous arrangement, to a place where relevant work is to be done on it following
-                    receipt of a refusal to issue an Individual Approval Certificate;</li>
+                    receipt of a refusal to issue a Minister's Approval Certificate;</li>
                 <li> - bringing it away from a place where relevant work has been done on it.</li>
             </ul>
-            <p>You may have been notified of defects in addition to those appertaining to the approval requirements.
-                Even in the above circumstances you may be committing an offence if you use the vehicle, and it does
+            <p>You may have been notified of defects in addition to those appertaining to the Approval requirements.
+                Even in the above circumstances you may be committing an offence if you use the vehicle and it does
                 not comply with the various regulations relating to its construction and use.</p>
         </div>
     </div>
@@ -246,10 +222,10 @@
             <h1>YOUR RIGHT TO APPEAL</h1>
         </div>
         <div class="section-text-wrapper">
-            <p>If you do not agree with the Refusal to Issue an Individual Approval Certificate, you may appeal. If you
-                wish to appeal against all or any of the grounds for refusal you must complete form <u><b>IVA17</b></u> which is
+            <p>If you do not agree with the Refusal to Issue a Minister's Approval Certificate, you may appeal. If you
+                wish to appeal against all or any of the grounds for refusal you must complete form <u><b>MSVA 17</b></u> which is
                 available from the <b>GOV.UK</b> website, <a href="www.gov.uk/vehicleapproval">www.gov.uk/vehicleapproval</a>.
-                Send the form to <b><u>approvals@dvsa.gov.uk</u></b>. DVSA will advise you how to pay by credit/debit card
+                Send the form to <a href = "approvals@dvsa.gov.uk"><b><u>approvals@dvsa.gov.uk</u></b></a>. DVSA will advise you how to pay by credit/debit card
                 or prefunded account after you have applied. It costs the same as the original test. The appeal must be received
                 at the <b>DVSA, Ellipse, Padley Road, Swansea, SA1 8AN</b> within 14 days, beginning with the date of the issue of the
                 notification of refusal.</p>
