--- a/src/main/resources/views/CommercialVehicles/IVA30.hbs
+++ b/src/main/resources/views/CommercialVehicles/IVA30.hbs
@@ -110,7 +110,7 @@
         </tr>
         <tr>
             <td class="table-row-cell"> 
-                <b>Signed: Testing</b>
+                <b>Signed: </b>
                 <div class="signature-image__wrapper">
                     <img id="signature-first-page" class="signature-image" src="{{signature.formattedImageData}}" alt="signature"/>
                 </div>                
