feat(cb2-11097): removed logger changes and fixed signature css

--- a/src/main/resources/assets/stylesheets/iva-30.hbs
+++ b/src/main/resources/assets/stylesheets/iva-30.hbs
@@ -110,13 +110,15 @@ width: 50%;
 }
 
 .signature-image__wrapper {
-    width:100%;
-    text-align: right;
+width:100%;
+text-align: right;
 }
 
 .signature-image {
-    height:100%;
-    width:10%;
+height:auto;
+width: 200px;
+text-align: right;
+margin-right: 1cm;
 }
 
 .footer-left {
