--- a/src/main/resources/assets/stylesheets/iva-30.hbs
+++ b/src/main/resources/assets/stylesheets/iva-30.hbs
@@ -111,13 +111,12 @@ width: 50%;
 
 .signature-image__wrapper {
 width:100%;
-text-align: right;
 }
 
 .signature-image {
 height:auto;
 width: 200px;
-text-align: right;
+text-align: center;
 margin-right: 1cm;
 }
 
