--- a/src/main/resources/views/CommercialVehicles/MSVA30.hbs
+++ b/src/main/resources/views/CommercialVehicles/MSVA30.hbs
@@ -51,8 +51,8 @@
 
     <table class="table">
         <tr class="table-row-cell">
-            <td class="table-row-cell" id="veh-z-no"><b>Vehicle 'Z' No.: </b> {{msvaData.vehicleZNo}} </td>
-            <td class="table-row-cell" id="test-type"><b>Type: </b> <span class="test-category-value">{{msvaData.testType}}</span> </td>
+            <td class="table-row-cell" id="veh-z-no"><b>Vehicle 'Z' No.: </b> {{msvaData.vehicleZNumber}} </td>
+            <td class="table-row-cell" id="type"><b>Type: </b> <span class="test-category-value">{{msvaData.type}}</span> </td>
         </tr>
         <tr class="table-row-cell">
             <td class="table-row-cell" id="make-model"><b>Make/Model: </b>{{msvaData.make}}/{{msvaData.model}}</td>
