feat(cb2-11137): consistency refactor

--- a/src/main/resources/views/CommercialVehicles/MSVA30.hbs
+++ b/src/main/resources/views/CommercialVehicles/MSVA30.hbs
@@ -12,7 +12,7 @@
 <div class="first-page-header-left">
     <div class="header-serial-no">
         <div class="header-serial-no-title">
-            <span id="serial-no"> <b>Serial Number: </b> {{msvaData.serialNo}} </span>
+            <span id="serial-no"> <b>Serial Number: </b> {{msvaData.serialNumber}} </span>
         </div>
     </div>
     <div class="header-pagination">
