feat(cb2-11098): improved layout of table block containing signature

--- a/src/main/resources/assets/stylesheets/iva-msva-30.hbs
+++ b/src/main/resources/assets/stylesheets/iva-msva-30.hbs
@@ -128,8 +128,12 @@ padding: 1px;
 
 .signature-image {
 height:auto;
-width: 200px;
+width: 30%;
 margin-right: 1cm;
+}
+
+.signature-label {
+float:left;
 }
 
 .signature-image__wrapper {
