--- a/src/main/resources/views/CommercialVehicles/IVA30.hbs
+++ b/src/main/resources/views/CommercialVehicles/IVA30.hbs
@@ -105,12 +105,17 @@
 
     <table class="table">
         <tr>
-            <td></td>
+            <td rowspan="2" class="table-row-cell">
+                <div>
+                    <b class="signature-label">Signed: </b>
+                    <div class="signature-image__wrapper">
+                        <img id="signature-first-page" class="signature-image" src="{{signature.formattedImageData}}" alt="signature"/>                    </div>
+                </div>
+            </td>
             <td class="table-row-cell" id="re-app-date"> <b>Reapplication required by: </b> {{ivaData.reapplicationDate}} </td>
         </tr>
         <tr>
-            <td class="table-row-cell"> 
-                <b>Signed: </b>
+            <td class="table-row-cell">
                 <div class="signature-image__wrapper">
                     <img id="signature-first-page" class="signature-image" src="{{signature.formattedImageData}}" alt="signature"/>
                 </div>
