feat(CB2-9306): psv fail bilingual

--- a/src/main/resources/views/CommercialVehicles/failWelsh.hbs
+++ b/src/main/resources/views/CommercialVehicles/failWelsh.hbs
@@ -120,7 +120,7 @@
                               </span>
                               <span class="heading-info__title-right">
                               <span class="heading-info__title-message">
-                                  {{regOrIdHeading}}
+                                  {{regOrIdHeadingWelsh}}
                               </span>
                               </span>
                             </h2>
