--- a/src/main/resources/views/CommercialVehicles/failWelsh.hbs
+++ b/src/main/resources/views/CommercialVehicles/failWelsh.hbs
@@ -223,20 +223,20 @@
         <!-- results -->
         <div class="results">
             <div class="results__wrapper">
-                {{#if failData.summary.present}}
-                    {{~> views/CommercialVehicles/reasonsForRejection failData.summary}}
+                {{#if failData.summaryWelsh.present}}
+                    {{~> views/CommercialVehicles/reasonsForRejection failData.summaryWelsh}}
                 {{/if}}
-                {{#if failData.dangerous.present}}
-                    {{~> views/CommercialVehicles/reasonsForRejection failData.dangerous}}
+                {{#if failData.dangerousWelsh.present}}
+                    {{~> views/CommercialVehicles/reasonsForRejection failData.dangerousWelsh}}
                 {{/if}}
-                {{#if failData.major.present}}
-                    {{~> views/CommercialVehicles/reasonsForRejection failData.major}}
+                {{#if failData.majorWelsh.present}}
+                    {{~> views/CommercialVehicles/reasonsForRejection failData.majorWelsh}}
                 {{/if}}
-                {{#if failData.minor.present}}
-                    {{~> views/CommercialVehicles/reasonsForRejection failData.minor}}
+                {{#if failData.minorWelsh.present}}
+                    {{~> views/CommercialVehicles/reasonsForRejection failData.minorWelsh}}
                 {{/if}}
-                {{#if failData.advisory.present}}
-                    {{~> views/CommercialVehicles/reasonsForRejection failData.advisory}}
+                {{#if failData.advisoryWelsh.present}}
+                    {{~> views/CommercialVehicles/reasonsForRejection failData.advisoryWelsh}}
                 {{/if}}
                 {{#if failData.prs.present}}
                     {{~> views/CommercialVehicles/reasonsForRejection failData.prs}}
