feat(cb2-9302): added prs welsh for fail prs

--- a/src/main/resources/views/CommercialVehicles/VTG30Welsh.hbs
+++ b/src/main/resources/views/CommercialVehicles/VTG30Welsh.hbs
@@ -261,8 +261,8 @@
                 {{#if failData.advisoryWelsh.present}}
                     {{~> views/CommercialVehicles/reasonsForRejection failData.advisoryWelsh}}
                 {{/if}}
-                {{#if failData.prs.present}}
-                    {{~> views/CommercialVehicles/reasonsForRejection failData.prs}}
+                {{#if failData.prsWelsh.present}}
+                    {{~> views/CommercialVehicles/reasonsForRejection failData.prsWelsh}}
                 {{/if}}
             </div>
         </div>
