fix(cb2-9306): resolved typing issue in cvs cert test data provider
fix(cb2-9306): resolved issues with VTP30W unit tests

feat(CB2-9306): unit tests for psv fail welsh & bilingual

--- a/src/main/resources/views/CommercialVehicles/failWelsh.hbs
+++ b/src/main/resources/views/CommercialVehicles/failWelsh.hbs
@@ -210,7 +210,7 @@
                            </span>
                         </h2>
                         <span class="heading-info__content" id="mileage">
-                            {{failData.formattedCurrentOdometer}}
+                            {{failData.formattedCurrentOdometerWelsh}}
                         </span>
                     </div>
                     <!-- /heading-info -->
@@ -261,7 +261,7 @@
                         </span>
                         </span>
                     </h2>
-                     <span class="heading-info__content" id="location-of-test">
+                     <span class="heading-info__content" id="date-of-test">
                          {{failData.dateOfTheTest}}
                      </span>
                 </div>
@@ -300,11 +300,12 @@
                     </h2>
                      <span class="heading-info__content"
                            id="organisation-and-inspection-name">
-                     {{failData.testingOrganisation}}
+                     {{failData.testingOrganisationWelsh}}
                          <br/>
                          {{failData.issuersName}}
                      </span>
                 </div>
+                <!-- /heading-info -->
                 <!-- /heading-info -->
                 <!-- heading-info -->
                 <div class="heading-info util-avoid-page-break-inside">
