feat(CB2-9306): comments

--- a/src/main/resources/views/CommercialVehicles/failWelsh.hbs
+++ b/src/main/resources/views/CommercialVehicles/failWelsh.hbs
@@ -33,7 +33,7 @@
         </div>
         <div class="footer__certificate-tag">
                <span class="footer__certificate-tag-text">
-               {{presentedDocumentNameFail}}/{{versionNumberFail}}
+               {{presentedDocumentNameFail}}/{{VersionNumberFailWelsh}}
                </span>
         </div>
     </div>
@@ -305,7 +305,6 @@
                          {{failData.issuersName}}
                      </span>
                 </div>
-                <!-- /heading-info -->
                 <!-- /heading-info -->
                 <!-- heading-info -->
                 <div class="heading-info util-avoid-page-break-inside">
