feat(CB2-9306): comments

--- a/src/main/resources/views/CommercialVehicles/VTG30Welsh.hbs
+++ b/src/main/resources/views/CommercialVehicles/VTG30Welsh.hbs
@@ -263,6 +263,7 @@
                 {{/if}}
                 {{#if failData.prsWelsh.present}}
                     {{~> views/CommercialVehicles/reasonsForRejection failData.prsWelsh}}
+                    {{~> views/CommercialVehicles/reasonsForRejection failData.prsWelsh}}
                 {{/if}}
             </div>
         </div>
