feat(CB2-9306): comments

--- a/src/main/resources/views/CommercialVehicles/failWelsh.hbs
+++ b/src/main/resources/views/CommercialVehicles/failWelsh.hbs
@@ -70,7 +70,7 @@
         </div>
         <div class="footer__certificate-tag">
                <span class="footer__certificate-tag-text">
-               {{presentedDocumentNameFailWelsh}}/{{VersionNumberFailWelsh}}
+               {{presentedDocumentNameFailWelsh}}/{{versionNumberFailWelsh}}
                </span>
         </div>
     </div>
