feat(cb2-11479): reverted change to fail form

--- a/src/main/resources/views/CommercialVehicles/fail.hbs
+++ b/src/main/resources/views/CommercialVehicles/fail.hbs
@@ -84,7 +84,7 @@
             <div class="header__left">
                 <h1 class="header__title">
                     {{#if reissue}}
-                    <p class="heading-info--no-margin">Tystysgrif</p>
+                    <p class="heading-info--no-margin">{{reissue.reason}}</p>
                     {{/if}}
                     Refusal of MOT test certificate
                 </h1>
