--- a/src/main/resources/views/CommercialVehicles/failWelsh.hbs
+++ b/src/main/resources/views/CommercialVehicles/failWelsh.hbs
@@ -84,7 +84,7 @@
             <div class="header__left">
                 <h1 class="header__title">
                     {{#if reissue}}
-                    <p class="heading-info--no-margin">{{reissue.reason}}</p>
+                    <p class="heading-info--no-margin">Tystysgrif</p>
                     {{/if}}
                     Gwrthod tystysgrif prawf MOT
                 </h1>
