--- a/src/main/resources/views/CommercialVehicles/passWelsh.hbs
+++ b/src/main/resources/views/CommercialVehicles/passWelsh.hbs
@@ -84,7 +84,7 @@
             <div class="header__left">
                 <h1 class="header__title">
                     {{#if reissue}}
-                    <p class="heading-info--no-margin">Tystysgrif</p>
+                    <p class="heading-info--no-margin">Amnewid</p>
                     {{/if}}
                     Tystysgrif prawf MOT ({{testType}})
                 </h1>
