--- a/src/main/resources/views/CommercialVehicles/MSVA30.hbs
+++ b/src/main/resources/views/CommercialVehicles/MSVA30.hbs
@@ -107,7 +107,7 @@
                         <img id="signature-first-page" class="signature-image" src="{{signature.formattedImageData}}" alt="signature"/>                    </div>
                 </div>
             </td>
-            <td class="table-row-cell" id="re-app-date"> <b>Reapplication required by: </b> </td>
+            <td class="table-row-cell" id="re-app-date"> <b>Reapplication required by: </b> {{msvaData.reapplicationDate}} </td>
         </tr>
         <tr>
             <td class="table-row-cell" id="date"> <b>Date: </b> {{msvaData.date}} </td>
