feat(CB2-12602): spelling correction

--- a/src/main/resources/views/CommercialVehicles/IVA30.hbs
+++ b/src/main/resources/views/CommercialVehicles/IVA30.hbs
@@ -112,7 +112,7 @@
                         <img id="signature-first-page" class="signature-image" src="{{signature.formattedImageData}}" alt="signature"/>                    </div>
                 </div>
             </td>
-            <td class="table-row-cell" id="re-app-date"> <b>Reapplication required by: </b> {{ivadData.reapplicationDate}} </td>
+            <td class="table-row-cell" id="re-app-date"> <b>Reapplication required by: </b> {{ivaData.reapplicationDate}} </td>
         </tr>
         <tr>
             <td class="table-row-cell" id="date"> <b>Date: </b>  {{ivaData.date}} </td>
